# AutomationStation

./: .gitignore  Architecture.md  README.md  ScoringSystemDocumentation.md  automation-station.desktop  cidr.py  db.py  dhcp.py  dns_lookup.py  env-2  env.example  how 57b05e2 -- netbox_scoring.py  launcher.py  mail.py  main.py  main_bryce.py  netbox_cleanup.py  netbox_integration.py  netbox_scoring.py  output.txt  parser.py  pyproject.toml  requirements.txt  results.json  run_output.txt  runner.py  scan.py  schema.py  snmpnetbox.py  validate_env.py
AutomationStation/: netbox_api_tester.py
AutomationStation/netbox/: client.py
collectors/: __init__.py  nmap_collector.py  snmp_collector.py
ieeething/: oui_lookup.py
models/: __init__.py  correlate.py  device_record.py  evidence.py  scoring_result.py
netbox/: client.py  sync.py
scoring/: __init__.py  classification.py  existence.py  identity.py  system.py
